--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -17,18 +17,18 @@ body {
 }
 
 #wrapper.toggled {
-  padding-left: 250px;
+  padding-left: 150px;
 }
 
 #sidebar-wrapper {
   z-index: 1000;
   position: fixed;
-  left: 250px;
+  left: 150px;
   width: 0;
   height: 100%;
-  margin-left: -250px;
+  margin-left: -150px;
   overflow-y: auto;
-  background: #000;
+  background: #39B7FC;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
@@ -36,7 +36,7 @@ body {
 }
 
 #wrapper.toggled #sidebar-wrapper {
-  width: 250px;
+  width: 150px;
 }
 
 #page-content-wrapper {
@@ -47,7 +47,7 @@ body {
 
 #wrapper.toggled #page-content-wrapper {
   position: absolute;
-  margin-right: -250px;
+  margin-right: -150px;
 }
 
 
@@ -56,7 +56,7 @@ body {
 .sidebar-nav {
   position: absolute;
   top: 0;
-  width: 250px;
+  width: 150px;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -70,12 +70,13 @@ body {
 .sidebar-nav li a {
   display: block;
   text-decoration: none;
-  color: #999999;
+  color: #000;
 }
 
 .sidebar-nav li a:hover {
   text-decoration: none;
   color: #fff;
+  font-family: "Calibri";
   background: rgba(255, 255, 255, 0.2);
 }
 
@@ -85,12 +86,13 @@ body {
 
 .sidebar-nav>.sidebar-brand {
   height: 65px;
-  font-size: 18px;
+  font-size: 24px;
   line-height: 60px;
 }
 
 .sidebar-nav>.sidebar-brand a {
-  color: #999999;
+  color: #000;
+  font-family: "Calibri";
 }
 
 .sidebar-nav>.sidebar-brand a:hover {
@@ -103,13 +105,13 @@ body {
     padding-left: 0;
   }
   #wrapper.toggled {
-    padding-left: 250px;
+    padding-left: 150px;
   }
   #sidebar-wrapper {
     width: 0;
   }
   #wrapper.toggled #sidebar-wrapper {
-    width: 250px;
+    width: 150px;
   }
   #page-content-wrapper {
     padding: 20px;
@@ -119,4 +121,21 @@ body {
     position: relative;
     margin-right: 0;
   }
+}
+
+/*ada styles*/
+
+.ada-title {
+    color: #496E80;
+    font-family: "Calibri";
+
+}
+
+.ada-head {
+    height: 300px;
+}
+
+.ada-paragraph {
+    font-family: "Calibri";
+    color: #496E80;
 }
