--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -123,7 +123,7 @@ body {
   }
 }
 
-/*ada styles*/
+/* --------- ada styles --------- */
 
 .ada-title {
     color: #496E80;
@@ -138,4 +138,12 @@ body {
 .ada-paragraph {
     font-family: "Calibri";
     color: #496E80;
+}
+
+.ada-paragraph-bold {
+    font-family: "Calibri";
+    font-weight: bold;
+    color: #496E80;
+    float: left;
+    margin-right: 5px;
 }
