adding the sign up sheet

--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -128,7 +128,14 @@ body {
 .ada-title {
     color: #496E80;
     font-family: "Calibri";
+}
 
+.ada-title-sign-up {
+    color: #496E80;
+    font-family: "Calibri";
+    width: 640;
+    margin-left: 50px;
+    margin-bottom: 10px;
 }
 
 .ada-head {
