--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -145,12 +145,11 @@ body {
 .ada-paragraph {
     font-family: "Calibri";
     color: #496E80;
+    margin-bottom: 0;
 }
 
-.ada-paragraph-bold {
-    font-family: "Calibri";
+.bold {
     font-weight: bold;
-    color: #496E80;
     float: left;
     margin-right: 5px;
 }
@@ -163,4 +162,23 @@ body {
 .resources {
     margin-bottom: 0;
     margin-top: 15px;
+}
+
+.space {
+    margin-bottom: 15px;
+}
+
+.ada-blue {
+    font-weight: bold;
+    color: #668CD9;
+}
+
+.ada-purple {
+    font-weight: bold;
+    color: #9643A5;
+}
+
+.left {
+    float: left;
+    margin-right: 5px;
 }
