--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -41,12 +41,13 @@ body {
 
 #page-content-wrapper {
   width: 100%;
-  position: absolute;
+  position: relative;
   padding: 15px;
+  margin-right: -150px;
 }
 
 #wrapper.toggled #page-content-wrapper {
-  position: absolute;
+  position: relative;
   margin-right: -150px;
 }
 
@@ -98,29 +99,6 @@ body {
 .sidebar-nav>.sidebar-brand a:hover {
   color: #fff;
   background: none;
-}
-
-@media(min-width:768px) {
-  #wrapper {
-    padding-left: 0;
-  }
-  #wrapper.toggled {
-    padding-left: 150px;
-  }
-  #sidebar-wrapper {
-    width: 0;
-  }
-  #wrapper.toggled #sidebar-wrapper {
-    width: 150px;
-  }
-  #page-content-wrapper {
-    padding: 20px;
-    position: relative;
-  }
-  #wrapper.toggled #page-content-wrapper {
-    position: relative;
-    margin-right: 0;
-  }
 }
 
 /* --------- ada styles --------- */
@@ -190,4 +168,30 @@ body {
 
 .ada-background {
     background-color: #ccf4f9
+}
+
+.ada-link {
+    width: 100px;
+    height: 100px;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
+.ada-link-wrapper {
+    width: 120px;
+}
+
+.center {
+    margin: auto;
+    width: fit-content
+}
+.ada-blog-pic {
+    width: 100px;
+    height: 100px;
+    margin-right: 10px;
+}
+
+.ada-blog-menu {
+    margin-top: 15px;
+    margin-bottom: 30px;
 }
