--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -66,11 +66,13 @@ body {
 .sidebar-nav li {
   text-indent: 20px;
   line-height: 40px;
+  font-family: "Calibri";
 }
 
 .sidebar-nav li a {
   display: block;
   text-decoration: none;
+  font-family: "Calibri";
   color: #000;
 }
 
@@ -83,6 +85,7 @@ body {
 
 .sidebar-nav li a:active, .sidebar-nav li a:focus {
   text-decoration: none;
+  font-family: "Calibri";
 }
 
 .sidebar-nav>.sidebar-brand {
@@ -114,7 +117,7 @@ body {
     color: #496E80;
     font-family: "Calibri";
     width: 640;
-    margin-left: 50px;
+    text-align: center;
     margin-bottom: 10px;
 }
 
@@ -144,8 +147,18 @@ body {
     margin-top: 15px;
 }
 
+.ada-faq {
+    margin-bottom: 0;
+    margin-top: 15px;
+    font-weight: bold;
+}
+
 .space {
     margin-bottom: 15px;
+}
+
+.space-above {
+    margin-top: 15px;
 }
 
 .ada-blue {
@@ -210,4 +223,8 @@ body {
     .ada-big-calendar {
         display: inline;
     }
+}
+
+.ada-row {
+    border-bottom: 1px solid #496E80;
 }
