--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -223,6 +223,19 @@ body {
     display: none;
 }
 
+.find-us-photo {
+    width: 100%;
+    margin-top: 10px;
+}
+
+@media(min-width:480px) {
+    .find-us-photo {
+        width: 400px;
+        margin-top: 10px;
+    }
+}
+
+
 @media(min-width:840px) {
     .ada-small-calendar {
         display: none;
