--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -223,13 +223,13 @@ body {
     display: none;
 }
 
-.find-us-photo {
+.contact-us-photo {
     width: 100%;
     margin-top: 10px;
 }
 
 @media(min-width:480px) {
-    .find-us-photo {
+    .contact-us-photo {
         width: 400px;
         margin-top: 10px;
     }
