Fix font for Mac
I added a `sans-serif` fallback for the fonts, as Calibri is pretty much Windows only.

--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -74,20 +74,20 @@ body {
 .sidebar-nav li {
   text-indent: 20px;
   line-height: 40px;
-  font-family: "Calibri";
+  font-family: "Calibri", sans-serif;
 }
 
 .sidebar-nav li a {
   display: block;
   text-decoration: none;
-  font-family: "Calibri";
+  font-family: "Calibri", sans-serif;
   color: #000;
 }
 
 .sidebar-nav li a:hover {
   text-decoration: none;
   color: #fff;
-  font-family: "Calibri";
+  font-family: "Calibri", sans-serif;
   background: rgba(255, 255, 255, 0.2);
 }
 
@@ -99,18 +99,18 @@ body {
 .sidebar-nav>.sidebar-brand {
   height: 65px;
   font-size: 24px;
-  font-family: "Calibri";
+  font-family: "Calibri", sans-serif;
   line-height: 60px;
 }
 
 .sidebar-nav>.sidebar-brand a {
   color: #000;
-  font-family: "Calibri";
+  font-family: "Calibri", sans-serif;
 }
 
 .sidebar-nav>.sidebar-brand a:hover {
   color: #fff;
-  font-family: "Calibri";
+  font-family: "Calibri", sans-serif;
   background: none;
 }
 
@@ -118,12 +118,12 @@ body {
 
 .ada-title {
     color: black;
-    font-family: "Calibri";
+    font-family: "Calibri", sans-serif;
 }
 
 .ada-title-sign-up {
     color: black;
-    font-family: "Calibri";
+    font-family: "Calibri", sans-serif;
     width: 640;
     text-align: center;
     margin-bottom: 10px;
@@ -134,7 +134,7 @@ body {
 }
 
 .ada-paragraph {
-    font-family: "Calibri";
+    font-family: "Calibri", sans-serif;
     color: black;
     margin-bottom: 0;
 }
@@ -146,7 +146,7 @@ body {
 }
 
 .ada-list-item {
-    font-family: "Calibri";
+    font-family: "Calibri", sans-serif;
     color: black;
 }
 
@@ -274,7 +274,7 @@ body {
 }
 
 .ada-header-text {
-    font-family: "Calibri";
+    font-family: "Calibri", sans-serif;
     color: black;
     margin-left: 50px;
     padding-top: 3px;
