--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,14 @@
 <html lang="{{ site.lang }}">
 <head>
     <meta charset="UTF-8">
+    <!-- Bootstrap core CSS -->
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="/css/simple-sidebar.css" rel="stylesheet">
     {% seo %}{%comment%} SEO Plugin: Creates the <title> tag and lots of <meta> tags! {%endcomment%}
     {% feed_meta %}{%comment%} Links to the RSS feed. {%endcomment%}
 </head>
-<body>
+<body class="ada-background">
     {{ page }}
 </body>
 </html>
