--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@
     {% seo %}{%comment%} SEO Plugin: Creates the <title> tag and lots of <meta> tags! {%endcomment%}
     {% feed_meta %}{%comment%} Links to the RSS feed. {%endcomment%}
 </head>
-<body class="ada-background">
+<body class="ada-background" style="margin: 40px auto; max-width: 40em">
     {{ page }}
 </body>
 </html>
