--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -131,6 +131,20 @@ body {
     margin-bottom: 0;
 }
 
+.bottom-table {
+  vertical-align: bottom;
+  margin-left: 2em;
+}
+
+table {
+    max-width: 40em;
+    margin-bottom: 50%;
+}
+
+td {
+    padding:0 2em 0 0; /* Only right padding*/
+}
+
 .bold {
     font-weight: bold;
     float: left;
