changing meta tags once again

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,9 @@
     <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="/css/simple-sidebar.css" rel="stylesheet">
+    <meta itemprop="name" content="Ada's Team">
+    <meta itemprop="description" content="Ada's Team is a student group at the University of Alberta, promoting diversity in computing science, games, technology, engineering, and mathematics.">
+    <meta itemprop="image" content="https://adas-team.github.io/img/banner.PNG">
 </head>
 <body class="ada-background" style="margin: 40px auto; max-width: 40em">
     {{ page }}
